@@ -1,6 +1,7 @@
 package org.springframework.samples.petclinic.game;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
@@ -11,12 +12,23 @@ import javax.validation.Valid;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import javax.validation.Valid;
+
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.samples.petclinic.card.CardService;
 import org.springframework.samples.petclinic.player.Player;
 import org.springframework.samples.petclinic.player.PlayerService;
 import org.springframework.security.core.Authentication;
+import org.springframework.samples.petclinic.user.User;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Controller;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -24,6 +36,7 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
 
@@ -35,7 +48,8 @@ public class GameController {
 	
 	private static final String GAME_DETAILS = "games/gameDetails";
 	private static final String VIEW_CREATION_FORM = "games/createGame";
-	private static final String VIEW_GAME_LIST = "games/listGames";
+	private static final String VIEW_GAME_LIST_FINALIZED = "games/listGamesFinalized";
+	private static final String VIEW_GAME_LIST_IN_PROGRESS = "games/listGamesInProgress";
 	private static final String GAME_JOIN_VIEW = "games/joinGame";
 	private GameService gameService;
 	private CardService cardService;
@@ -57,7 +71,7 @@ public class GameController {
 	}
 	
 	@GetMapping(value = "/new")
-	public String initForm(Map<String, Object> model) {
+	public String iniciarFormulario(Map<String, Object> model) {
 		Game game = initGame();
 		List<GameMode> gameModes = Arrays.asList(GameMode.values());
 		model.put("game", game);
@@ -100,16 +114,16 @@ public class GameController {
 	@GetMapping(value = "/finalized")
 	public String listarPartidasAcabadas(Map<String, Object> model, @RequestParam Map<String, Object> params) {
 		int page = params.get("page") != null ? (Integer.valueOf(params.get("page").toString()) -1) : 0;
-		
+
 		PageRequest pageRequest = PageRequest.of(page, 5);
 		Page<Game> pageGamesFinalized= gameService.getGamesFinalized(pageRequest);
-		
+
 		int totalPages = pageGamesFinalized.getTotalPages();
 		List<Integer> pages=new ArrayList<>();
 		if(totalPages > 0) {
-			pages= IntStream.rangeClosed(1, totalPages).boxed().toList();
+			pages= IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
 		}
-		
+
         model.put( "games", pageGamesFinalized.getContent());
         model.put( "pages", pages);
         model.put( "current", page + 1);
@@ -130,7 +144,11 @@ public class GameController {
 		int totalPages = pageGamesInProgress.getTotalPages();
 		List<Integer> pages=new ArrayList<>();
 		if(totalPages > 0) {
+<<<<<<< HEAD
 			pages= IntStream.rangeClosed(1, totalPages).boxed().toList();
+=======
+			pages= IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
+>>>>>>> master
 		}
 		
         model.put( "games", pageGamesInProgress.getContent());
@@ -144,18 +162,33 @@ public class GameController {
 	}
 	
 	@GetMapping("/join")
+<<<<<<< HEAD
 	public ModelAndView initJoinGameForm() throws Exception {
+=======
+	public ModelAndView joinGames() throws Exception {
+>>>>>>> master
 		ModelAndView mav = new ModelAndView(GAME_JOIN_VIEW);
 		mav.addObject("gameCode",0);
 		return mav;
 	}
 	
 	@PostMapping("/join")
+<<<<<<< HEAD
 	public String joinGame(Authentication authentication, @ModelAttribute("gameCode") int gameCode) throws Exception {
 		Game game = gameService.getGameByCode(gameCode);
 		addCurrentPlayerToGame(authentication.getName(),game);
 		
 		return "redirect:/games/join/"+game.getGameCode();
+=======
+	public String joinGame(@ModelAttribute("gameCode") int gameCode) throws Exception {
+		Game game = gameService.getGameByCode(gameCode);
+		if(game.getPlayers().size() >= 4) {
+			return "redirect:/games/error";
+		} else {
+			addCurrentPlayerToGame(game);
+		}
+		return "redirect:/games/join/"+game.getGameCode().toString();
+>>>>>>> master
 	}
 	
 	@GetMapping("/join/{gameCode}")
@@ -169,11 +202,34 @@ public class GameController {
 		return mav;
 	}
 	
+<<<<<<< HEAD
 	private void addCurrentPlayerToGame(String username, Game game) throws Exception {
 		Player player = playerService.getPlayerByUsername(username);
 		this.gameService.addPlayerToGame(player, game);
 	}
 	
+=======
+	private void addCurrentPlayerToGame(Game game) throws Exception {
+		String currentUsername = "";
+		try {
+			Object currentUser = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+			if (currentUser instanceof UserDetails) {
+					currentUsername = ((UserDetails)currentUser).getUsername();
+				} else {
+					currentUsername = currentUser.toString();
+				}
+		} catch(Exception e) {
+			e.printStackTrace();
+		}
+		
+		Player player = playerService.getPlayerByUsername(currentUsername);
+		game.addPlayer(player);
+		gameService.saveGame(game);
+	}
+
+
+
+>>>>>>> master
     @GetMapping(value = "/board")
     public String board(Map<String, Object> model) {
         return "games/board";
